updated french toast recipe and link

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -25,7 +25,13 @@
             <li>8 slices brioche bread</li>
             <li>1/2 cup maple syrup</li>
         </ul>
-
+        <h2>Steps</h2>
+        <ol>
+            <li>Combine cinnamon, nutmeg and sugar in a small bowl</li>
+            <li>Whisk together cinnamon mixture, milk, eggs and vanilla. Pour into shallow container</li>
+            <li>In a skillet, melt butter on medium heat. Dip bread in egg mixture, fry each side until golden brown</li>
+            <li>Serve with syrup</li>
+        </ol>
 
 </body>
 </html>
