--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="french-toast.html">Brioche French toast</a>
+    <a href="./recipes/french-toast.html">Brioche French toast</a>
 </body>
 </html>
