--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/french-toast.html">Brioche French toast</a>
+    <h1>My Recipes</h1>
+    <ul>
+    <li><a href="./recipes/french-toast.html">Brioche French Toast</a></li>
+    <li><a href="./recipes/crepes.html">Crepes</a></li>
+    </ul>
 </body>
 </html>
